--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=LDNF;Trusted_Connection=true;TrustServerCertificate=true"
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=LDNF;Trusted_Connection=true;TrustServerCertificate=true"
   }
 }
